# consoleffects

./: .buildinfo  .gitignore  .travis.yml  README.md  consoleffects.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg
.github/workflows/: codecov.yml  docs.yml  pytest.yml
_modules/: consoleffects.html  index.html
_sources/: consoleffects.rst.txt
consoleffects/: __init__.py  cli.py  consoleffects.py
docs/source/: conf.py  index.rst
tests/: test_consoleffects.py
