[metadata]
name = consoleffects
version = 0.0.1
author = Jorge Alda
url = https://github.com/Jorge-Alda/consoleffects
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = consoleffects

[options.entry_points]
console_scripts = 
  consoleffects = consoleffects.cli:main