[metadata]
name = consoleffects
version = 0.0.1
author = Jorge Alda
author_email = jalda@unizar.es
url = https://github.com/Jorge-Alda/consoleffects
description = Style strings using ANSI Escape sequences
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPL v3
license_file = LICENSE
project_urls =
    Source = https://github.com/Jorge-Alda/consoleffects
    Tracker = https://github.com/Jorge-Alda/consoleffects/issues

[options]
packages = consoleffects
test_suite = tests

[options.entry_points]
console_scripts = 
  consoleffects = consoleffects.cli:main

[tool:pytest]
testpaths = 
  tests